objectives api done (checked with postman), some fixes on yaml file and challenges.py
